[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/images/place_holder_1366_768.png" type="Texture" id=2]
[ext_resource path="res://scenes/Settings.tscn" type="PackedScene" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
settings_menu = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_Menu" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.501961 )
anchor_right = 0.2
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="Start_Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_Title" type="Label" parent="Start_Menu/VBC"]
margin_right = 130.0
margin_bottom = 14.0
text = "iter astrum"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="Start_Menu/VBC"]
margin_top = 18.0
margin_right = 130.0
margin_bottom = 22.0

[node name="Continue" type="Button" parent="Start_Menu/VBC"]
margin_top = 26.0
margin_right = 130.0
margin_bottom = 46.0
text = "Continue"

[node name="New_Game" type="Button" parent="Start_Menu/VBC"]
margin_top = 50.0
margin_right = 130.0
margin_bottom = 70.0
text = "New Game"

[node name="Settings" type="Button" parent="Start_Menu/VBC"]
margin_top = 74.0
margin_right = 130.0
margin_bottom = 94.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Start_Menu/VBC"]
margin_top = 98.0
margin_right = 130.0
margin_bottom = 118.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
